k8s/devopslabs/devopslabs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopslabs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopslabs
  template:
    metadata:
      labels:
        app: devopslabs
    spec:
      containers:
        - name: devopslabs-container
          image: piotrdamrych/devopslabs:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
