k8s/devopslabs/devosplabs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devopslabs-service
spec:
  selector:
    app: devopslabs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
