k8s/devopslabs/devopslabs-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopslabs-ingress
spec:
  rules:
  # minikube ip 
  # C:\Windows\System32\drivers\etc\hosts 
  # <minikube-ip> your-domain.com
    - host: api.devopslabs.proj
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devopslabs-service
                port:
                  number: 80
